# connector

./: .gitignore  Dockerfile  Makefile  README.md  backend.py  client.py  docker-compose.yml  ex.py  example.py  frontend.py  main.py  pyproject.toml  requirements.txt  test.py
frontapp/: client.py  highlight.py  parser.py  terminal_ui.py
src/: __init__.py  config.py  handler.py  kernelwrapper.py  messenger.py  models.py  routes.py  sender.py  terminal.py
